Added dynamic link to Boost in tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,14 @@ if(MSVC)
   set_source_files_properties( cli/main.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
 endif(MSVC)
 
+if(NOT Boost_UNIT_TEST_FRAMEWORK_LIBRARY MATCHES "\\.(a|lib)$")
+  if(MSVC)
+    add_definitions(/DBOOST_TEST_DYN_LINK)
+  else(MSVC)
+    add_definitions(-DBOOST_TEST_DYN_LINK)
+  endif(MSVC)
+endif()
+
 file(GLOB ES_SOURCES "elasticsearch/*.cpp")
 add_executable( es_test ${COMMON_SOURCES} ${ES_SOURCES} )
 target_link_libraries( es_test graphene_chain graphene_app graphene_account_history graphene_elasticsearch graphene_es_objects graphene_egenesis_none fc ${PLATFORM_SPECIFIC_LIBS} )
